prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/assign_to_expr.diag.txt
ERROR: can't assign to expression
testData/diagnostics/compilation_errors/sema_errors/assign_to_expr.nut:2:0

// EXPECT_ERROR: "can't assign to expression"
(1 + 2) = 5
^-----


